@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false

'left to right direction

skinparam classAttributeIconSize 0

hide circle
hide methods

'title Domain Model

'class Platform {
'  -description
'}

class Organization {
    name
    vatNumber
    website
    phoneNumber
    email
}

class Managers {
    name
    email
    position
    phone
}
class HRM{
}
class Collaborators{
    name
    birthdate
    admission date
    address
    contact info (mobile and email)
    ID doc type
    ID number
}
class Employee {
    name
    email
    position
    phone
}

'class User {
'    name
'    email
'    password
'}

'Platform "1" -- "*" Organization : has registered >
'Platform "1" -- "*" Category : defines >
Organization "1" - "0..*" Employee : has >
'Task "*" -- "1" Employee: created by >
Employee "1" -- "*" Managers : have >
Managers -- HRM : have >
HRM -- Collaborators: register >
Employee -- Collaborators : have >
'Employee "0..1" -- "1" User: acts as >>
@enduml